# tue-env

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  .pylintrc  .pyproject.toml  .travis  .travis.yml  .yamllint  Dockerfile  README.md  bootstrap.bash  pyproject.toml  setup-indigo.bash  setup.bash  setup.cfg  setup.py
ci/: .gitlab-ci.yml.example  .travis.yml.example  .travis.yml.multiple_pkgs.example  README.md  azure-pipelines.example.yml  azure-pipelines.multiple_pkgs.example.yml  azure-pipelines.yml.example  azure-pipelines.yml.multiple_pkgs.example  azure_commit_range.py  base.gitlab-ci.yml  build-docker-image.sh  build-package.sh  delete-docker-tags.py  docker-build-select.bash  docker-buildx.gitlab-ci.yml  docker-manifest-generator.sh  gh-actions.example.yml  gh-actions.multiple_pkgs.example.yml  install-build-test.gitlab-ci.yml  install-package.sh  mirror-upstream.bash  mirror-upstream.gitlab-ci.yml  organization-packages.sh  package-release.gitlab-ci.yml  packages.sh  set-branch.sh  ssh-merge-known_hosts.py  template.gitlab-ci.yml  test-package.sh  travis.example.yml  travis.multiple_pkgs.example.yml  tue-env.gitlab-ci.yml  update-docker.bash  update-docker.sh
dockerfiles/: docker-buildx.Dockerfile  package-release.Dockerfile  tue-env-cuda-10.0.Dockerfile  tue-env-cuda.Dockerfile  tue-env.Dockerfile
docs/: CI_GitLab_Setup.rst  CI_Travis_Setup.md
installer/: bootstrap.bash  check-pip-pkg-installed-version.py  check_dependency_versions.py  generate_deb_control.py  lsb_release.py  (+14 more)
(+1465 files in other folders)
