[metadata]
name = tue_env
version = attr: tue_env.__version__
url = attr: tue_env.__url__
description = A DevOps Swiss Knife for Robotics Software Development
long_description = file: README.md
long_description_content_type = text/markdown
keywords = DevOps, ROS, Debian, Git
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Bash

[options]
# zip_safe is obsolete (see https://setuptools.pypa.io/en/latest/deprecated/zip_safe.html)
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    appdirs
    argcomplete
    catkin_pkg
    catkin_tools
    colorlog

[options.packages.find]
where=src

[options.package_data]
tue-env = setup.bash, installer/*, setup/*

[options.entry_points]
console_scripts =
    tue-env = tue_env.workspace.__main__:main
# aro_tools.commands.aro.verbs =
#     create = aro_tools.verbs.aro_create:description
